force-app/main/default/objects/QuoteLineItem/fields/A_Side_Asset__c.field-meta.xml
<CustomField>
    <fullName>A_Side_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A-side cross-connect asset for Cross Connect products. Passed to Odoo in IP-1.</description>
    <inlineHelpText>Select the A-side cross-connect asset for this line.</inlineHelpText>
    <label>A-Side Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.Product2.Family</field>
            <operation>equals</operation>
            <value>Interconnect</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Quote Lines (A-Side)</relationshipLabel>
    <relationshipName>A_Side_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>