force-app/main/default/objects/QuoteLineItem/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Change Order quotes: references the existing Asset this line amends. Set automatically by the Change Order Creator from the source Order&apos;s active Asset.</description>
    <inlineHelpText>The Asset this line applies to. Set automatically by the Change Order Creator.</inlineHelpText>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>