force-app/main/default/objects/QuoteLineItem/fields/Assigned_Inventory_Location__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Inventory_Location__c</fullName>
    <description>Physical location code snapshot (e.g. Hall/Row/Rack). Populated from Inventory__c record at Space ID assignment. Flows to OrderItem.Assigned_Inventory_Location__c as an asset snapshot.</description>
    <label>Assigned Inventory Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>