force-app/main/default/objects/QuoteLineItem/fields/Attribute_Type_Display__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Type_Display__c</fullName>
    <description>Display hint showing the Sales Rep what type of attribute value to enter (e.g. Draw Cap in kVA). Will be converted to Formula(Product2.Attribute_Type__c) when Module 11 Product fields are deployed.</description>
    <label>Attribute Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>