force-app/main/default/objects/QuoteLineItem/fields/BAN_ID__c.field-meta.xml
<CustomField>
    <fullName>BAN_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Line-level BAN override. When populated, takes precedence over Quote.BAN__c for this line. Required for customers with multiple BANs where specific products bill to specific BANs. Flows to OrderItem.BAN_ID__c.</description>
    <label>BAN (Line Override)</label>
    <referenceTo>BillingAccount__c</referenceTo>
    <relationshipLabel>Quote Lines (BAN Override)</relationshipLabel>
    <relationshipName>Quote_Lines_BAN_Override</relationshipName>
    <type>Lookup</type>
</CustomField>