force-app/main/default/objects/QuoteLineItem/fields/Billing_Mode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Mode__c</fullName>
    <description>Auto-set from Product2 billing charge type. Arrear = bill after service period. Advance = bill before service period. Passed as ns_charge_type in IP-1 payload. Required for Quote revision cloning.</description>
    <label>Billing Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arrear</fullName>
            </value>
            <value>
                <fullName>Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>