force-app/main/default/objects/QuoteLineItem/fields/Breaker_ID__c.field-meta.xml
<CustomField>
    <fullName>Breaker_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned Breaker ID - required for Power Circuit products. Provisional at quote; locked at order confirmation.</description>
    <label>Breaker ID</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Quote Lines (Breaker)</relationshipLabel>
    <relationshipName>Quote_Lines_Breaker</relationshipName>
    <type>Lookup</type>
</CustomField>