force-app/main/default/objects/QuoteLineItem/fields/CabE__c.field-meta.xml
<CustomField>
    <fullName>CabE__c</fullName>
    <label>CabE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>