force-app/main/default/objects/QuoteLineItem/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <description>For Change Order quotes: the change action for this line item. Maps to OrderItem.ns_change_type__c when the SOFHandler creates the Order. NEW = add line, DELETE = remove line, CHANGE = amend quantity, CHANGE_PRICE = amend price only, NO_CHANGE = carry forward unchanged (BAN Change only).</description>
    <inlineHelpText>The change action for this line. Set automatically by the Change Order Creator component.</inlineHelpText>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
                <label>New</label>
            </value>
            <value>
                <fullName>DELETE</fullName>
                <label>Delete</label>
            </value>
            <value>
                <fullName>CHANGE</fullName>
                <label>Change</label>
            </value>
            <value>
                <fullName>CHANGE_PRICE</fullName>
                <label>Change Price</label>
            </value>
            <value>
                <fullName>NO_CHANGE</fullName>
                <label>No Change</label>
            </value>
            <value>
                <fullName>RENEW</fullName>
                <label>Renew</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>