force-app/main/default/objects/QuoteLineItem/fields/Charge_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Charge_Frequency__c</fullName>
    <description>Auto-set from Product2.Billing_Period__c. Must match BAN.Invoice_Frequency__c or trigger SBI. Passed as ns_invoice_frequency_id in IP-1 payload. Required for Quote revision cloning.</description>
    <label>Charge Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Usage-Based</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half-Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>