force-app/main/default/objects/QuoteLineItem/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <description>Auto-set from Product2 charge type field. MRC = recurring monthly charge; NRC = one-time installation charge; Usage = manual Odoo billing in Phase 1. Drives BillingEvent creation logic on Order confirmation. Required for Quote revision cloning.</description>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MRC</fullName>
            </value>
            <value>
                <fullName>NRC</fullName>
            </value>
            <value>
                <fullName>Usage-Based</fullName>
            </value>
            <value>
                <fullName>Additional Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>