force-app/main/default/objects/QuoteLineItem/fields/Custom_Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Custom_Attribute_Value__c</fullName>
    <label>Custom Attribute Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>