force-app/main/default/objects/QuoteLineItem/fields/Customer_PO_Line__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Line__c</fullName>
    <description>Line-level PO reference if customer requires per-line PO tracking. Passed in IP-1 order line payload.</description>
    <label>Customer PO Line Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>