force-app/main/default/objects/QuoteLineItem/fields/Customer_PO_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Reference__c</fullName>
    <description>Customer Purchase Order / Work Order / Contract ID. Displayed at invoice line level. Flows to OrderItem.Customer_PO_Reference__c.</description>
    <label>Customer PO Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>