force-app/main/default/objects/QuoteLineItem/fields/Free_Months_Override__c.field-meta.xml
<CustomField>
    <fullName>Free_Months_Override__c</fullName>
    <description>Overrides Quote.Free_Months__c for this specific line only. Used when different lines have different free month periods. If blank: inherits Quote.Free_Months__c.</description>
    <label>Free Months (Line Override)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>