force-app/main/default/objects/QuoteLineItem/fields/Free_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Period_End_Date__c</fullName>
    <description>End date of the free billing period for this line. Populated when Quote.Free_Months__c &gt; 0.</description>
    <label>Free Period End Date</label>
    <type>Date</type>
</CustomField>