force-app/main/default/objects/QuoteLineItem/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Breaker / Port (Inventory)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Inventory__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Inventory_Breaker</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Quote Lines (Breaker)</relationshipLabel>
    <relationshipName>QuoteLines_Breaker</relationshipName>
    <type>Lookup</type>
</CustomField>