force-app/main/default/objects/QuoteLineItem/fields/Is_Auto_NRC__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_NRC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE on all NRC lines auto-added by the Revenue Cloud bundle mechanism (ProductComponentGroup / ProductRelatedComponent). FALSE on MRC lines. Read-only - set by automation. VR-QLI-01 uses this to block independent deletion of auto-NRC lines.</description>
    <label>System-Generated NRC Line</label>
    <type>Checkbox</type>
</CustomField>