force-app/main/default/objects/QuoteLineItem/fields/Line_Booking_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Line_Booking_Bucket__c</fullName>
    <description>Booking bucket at line level. Mirrors Opportunity.Booking_Bucket__c for granular attribution. Used for Line_Category__c attribution in combined Amendment+Renewal Quotes.</description>
    <label>Line Booking Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Service</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Price Increase</fullName>
            </value>
            <value>
                <fullName>Price Decrease</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Comp Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>