force-app/main/default/objects/QuoteLineItem/fields/Line_Category__c.field-meta.xml
<CustomField>
    <fullName>Line_Category__c</fullName>
    <description>Used by Revenue Ops when a single Quote covers both Amendment and Renewal lines. Each line tagged independently for booking attribution. Revenue Ops sets this manually. Required for Quote revision cloning.</description>
    <label>Line Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Service</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>