force-app/main/default/objects/QuoteLineItem/fields/Line_Origin__c.field-meta.xml
<CustomField>
    <fullName>Line_Origin__c</fullName>
    <description>Indicates how this quote line item was created: New (standard product add), Change Order (from a change order quote), or Ramp (created by the ramp builder). Used by integration to determine processing logic.</description>
    <label>Line Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>Ramp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>