force-app/main/default/objects/QuoteLineItem/fields/Line_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Line_Remarks__c</fullName>
    <description>Free-text remarks per quote line. Displayed in invoice Remarks column. Flows to OrderItem.Line_Remarks__c.</description>
    <label>Line Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>