force-app/main/default/objects/QuoteLineItem/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <description>Custom list price that can be updated when attribute or KVA changes occur. Populated from PricebookEntry.UnitPrice on creation. Unlike the standard ListPrice field, this field is editable.</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>