force-app/main/default/objects/QuoteLineItem/fields/Merge_IB_Task__c.field-meta.xml
<CustomField>
    <fullName>Merge_IB_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copied from Product2.Merge_IB_Task__c when the line item is added. Tells the integration to merge IB tasks for this line.</description>
    <label>Merge IB Task</label>
    <type>Checkbox</type>
</CustomField>