force-app/main/default/objects/QuoteLineItem/fields/NRC_Amount__c.field-meta.xml
<CustomField>
    <fullName>NRC_Amount__c</fullName>
    <description>Total one-time charge for this line, net of line Discount. Formula: UnitPrice * Quantity * (1 - Discount) for NRC lines; $0 for non-NRC lines. (Discount is a Percent field, so in formula context it is the fraction: 100% = 1, 50% = 0.5.) Used by Quote.Total_NRC__c roll-up.</description>
    <formula>IF(ISPICKVAL(Charge_Type__c, &apos;NRC&apos;), UnitPrice * Quantity * (1 - Discount), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total NRC (Line)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>