force-app/main/default/objects/QuoteLineItem/fields/Odoo_Attribute_Value_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Attribute_Value_ID__c</fullName>
    <description>The Odoo ns_product_product_attr integer ID resolved from Product_Attribute_Variant__mdt using the product code, selected attribute value, and quote operation site. Copied to OrderItem.Odoo_Attribute_Value_ID__c by the SOF Handler flow during quote-to-order conversion.</description>
    <inlineHelpText>Odoo variant combination ID. Auto-resolved from the product attribute mapping.</inlineHelpText>
    <label>Odoo Attribute Value ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>