force-app/main/default/objects/QuoteLineItem/fields/Odoo_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Product_ID__c</fullName>
    <description>Odoo product ID carried from the original OrderItem for Change Order quotes. Copied to OrderItem.Odoo_Product_ID__c by the SOFHandler so IP-4 can identify the Odoo product without an extra query.</description>
    <inlineHelpText>Odoo product identifier. Set automatically by the Change Order Creator from the original order line.</inlineHelpText>
    <label>Odoo Product ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>