force-app/main/default/objects/QuoteLineItem/fields/Odoo_Project_Task_IDs__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Project_Task_IDs__c</fullName>
    <label>Odoo Project Task IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>