force-app/main/default/objects/QuoteLineItem/fields/Paired_MRC_Line__c.field-meta.xml
<CustomField>
    <fullName>Paired_MRC_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For NRC lines: lookup to the parent MRC QuoteLineItem in the bundle. Set by Revenue Cloud bundle mechanism. NULL on MRC lines. Used by VR-QLI-01 Apex trigger to validate deletion of NRC lines.</description>
    <label>Paired MRC Line</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Paired NRC Lines</relationshipLabel>
    <relationshipName>Paired_NRC_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>