force-app/main/default/objects/QuoteLineItem/fields/Power_kVA__c.field-meta.xml
<CustomField>
    <fullName>Power_kVA__c</fullName>
    <description>For cabinet/cage lines: allocated power draw for this specific unit in kVA. Helps Facilities confirm total power capacity required at the site for this Quote.</description>
    <label>Power Draw (kVA)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>