force-app/main/default/objects/QuoteLineItem/fields/Product_Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Attribute_Value__c</fullName>
    <description>The attribute value entered for this MRC product line (e.g. 3kVA, 20Amps, LC). Required when Product2.Attribute_Type__c is not None. F-14 uses this to construct the attribute-price lookup key.</description>
    <label>Attribute Value Selected</label>
    <length>100</length>
    <type>Text</type>
</CustomField>