force-app/main/default/objects/QuoteLineItem/fields/Ramp_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Identifier__c</fullName>
    <description>Identifies whether a ramp phase line is a new addition or a change to a linked prior phase. Set automatically by the ramp modal.</description>
    <label>Ramp Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Price_Change</fullName>
                <label>Price Change</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>