force-app/main/default/objects/QuoteLineItem/fields/Ramp_Increment_Date__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Increment_Date__c</fullName>
    <description>Effective date of this ramp increment. Required when Ramp_Line__c = TRUE.</description>
    <label>Ramp Increment Date</label>
    <type>Date</type>
</CustomField>