force-app/main/default/objects/QuoteLineItem/fields/Ramp_Invoice_Display__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Invoice_Display__c</fullName>
    <description>Controls how Odoo presents ramp order quantities on invoices. Final_Value = show total committed quantity per ramp phase. Incremental_Value = show only the incremental quantity added. Defaults from Product2.Ramp_Behavior__c. Passed to Odoo in IP-1 as Ramp_Invoice_Display__c.</description>
    <label>Ramp Invoice Display</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Final_Value</fullName>
                <label>Final Value</label>
            </value>
            <value>
                <fullName>Incremental_Value</fullName>
                <label>Incremental Value</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>