force-app/main/default/objects/QuoteLineItem/fields/Ramp_Line__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this line item belongs to a ramp phase rather than the base quote. Used by DE_QuoteTemplateController to separate ramp lines from base lines.</description>
    <label>Ramp Line</label>
    <type>Checkbox</type>
</CustomField>