force-app/main/default/objects/QuoteLineItem/fields/Ramp_Linked_Phase__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Linked_Phase__c</fullName>
    <description>The ramp phase number this line links to (e.g., Phase 3 is a change to Phase 1 cabinet → value is 1). Null if standalone Add.</description>
    <label>Ramp Linked Phase</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>