force-app/main/default/objects/QuoteLineItem/fields/Ramp_Parent_Line__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Parent_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this ramp increment line to its parent ramp line. Required when Ramp_Line__c = TRUE.</description>
    <label>Ramp Parent Line</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Child Ramp Lines</relationshipLabel>
    <relationshipName>Child_Ramp_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>