force-app/main/default/objects/QuoteLineItem/fields/Ramp_Phase__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Phase__c</fullName>
    <description>Required when Quote.Is_Ramp_Deal__c = TRUE. Values 1-6. Which delivery phase this line belongs to. Lines in Phase 1 deliver first; Phase 2 next.</description>
    <label>Ramp Phase</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>