force-app/main/default/objects/QuoteLineItem/fields/Ramp_Phase_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Phase_Notes__c</fullName>
    <description>Free-text note captured per ramp phase in the Quote Line Editor ramp modal (FB-815). Stamped on every line belonging to that phase. Kept separate from Line_Remarks__c so a phase note never overwrites a user&apos;s per-line remark.</description>
    <inlineHelpText>Note for this ramp phase. Does not affect the per-line Line Remarks shown on the quote document.</inlineHelpText>
    <label>Ramp Phase Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>