force-app/main/default/objects/QuoteLineItem/fields/Ramp_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Start_Date__c</fullName>
    <description>Required when Ramp_Phase__c is set. The date this ramp phase billing begins. Must be &gt;= Quote.StartDate. Passed to Odoo in IP-1 payload.</description>
    <label>Ramp Phase Start Date</label>
    <type>Date</type>
</CustomField>