force-app/main/default/objects/QuoteLineItem/fields/Ramp_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Step_Number__c</fullName>
    <description>Sequential step number within the ramp schedule (1 = initial, 2 = first increment, etc.). Used to order ramp lines for display and Order creation.</description>
    <label>Ramp Step Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>