force-app/main/default/objects/QuoteLineItem/fields/RDD__c.field-meta.xml
<CustomField>
    <fullName>RDD__c</fullName>
    <description>Requested Delivery Date for this line. Defaults to Opportunity.GoLive_Target_Date__c on Quote creation. Overridable per line for ramp deals. Flows to OrderItem.RDD__c on Order creation.</description>
    <label>RDD</label>
    <type>Date</type>
</CustomField>