force-app/main/default/objects/QuoteLineItem/fields/Reserved__c.field-meta.xml
<CustomField>
    <fullName>Reserved__c</fullName>
    <description>Indicates whether inventory has been reserved for this quote line. Set automatically when a space is assigned via the Capacity Reserve component.</description>
    <inlineHelpText>Whether inventory space has been reserved for this line item.</inlineHelpText>
    <label>Reserved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Reserved</fullName>
                <default>true</default>
                <label>Not Reserved</label>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>