force-app/main/default/objects/QuoteLineItem/fields/Space_ID__c.field-meta.xml
<CustomField>
    <fullName>Space_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned Space ID - required for Space and Power products. Provisional at quote; locked at order confirmation.</description>
    <label>Space ID</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Quote Lines (Space)</relationshipLabel>
    <relationshipName>Quote_Lines_Space</relationshipName>
    <type>Lookup</type>
</CustomField>