force-app/main/default/objects/QuoteLineItem/fields/Target_BAN__c.field-meta.xml
<CustomField>
    <fullName>Target_BAN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target BAN</label>
    <referenceTo>BillingAccount__c</referenceTo>
    <relationshipLabel>Quote Lines (Target BAN)</relationshipLabel>
    <relationshipName>Quote_Lines_Target_BAN</relationshipName>
    <type>Lookup</type>
</CustomField>