force-app/main/default/objects/QuoteLineItem/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <description>Applicable tax rate for this line. Inherited from Product2.Customer_Tax__c for the relevant market. Displayed on quote document.</description>
    <label>Tax Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>