force-app/main/default/objects/QuoteLineItem/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <description>Calculated tax amount for this specific line. Rolls up to Quote.Total_Tax__c.</description>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>