force-app/main/default/objects/QuoteLineItem/fields/Withholding_Tax__c.field-meta.xml
<CustomField>
    <fullName>Withholding_Tax__c</fullName>
    <description>Flag/indicative withholding tax amount for this line. Actual withholding tax calculation remains in Odoo at invoice generation.</description>
    <label>Withholding Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>