force-app/main/default/objects/QuoteLineItem/fields/Z_Side_Service_ID__c.field-meta.xml
<CustomField>
    <fullName>Z_Side_Service_ID__c</fullName>
    <label>Z-Side Service ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>